--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,15 +1,16 @@
 <footer class="footer">
-  <span class="todo-count"><strong>{{ itemsLeft$ | async }}</strong><span> {{ itemText$ | async }} left</span></span>
+  <span class="todo-count"
+    ><strong data-cy="remaining-count">{{ itemsLeft$ | async }}</strong
+    ><span> {{ itemText$ | async }} left</span></span
+  >
   <ul class="filters">
     <li *ngFor="let item of filterTitles">
-      <a
-        href="#"
-        [class.selected]="item.key === (filter$ | async)"
-        (click)="handleFilterSelect(item.key)"
-      >
+      <a href="#" [class.selected]="item.key === (filter$ | async)" (click)="handleFilterSelect(item.key)">
         {{ item.value }}
       </a>
     </li>
   </ul>
-  <button *ngIf="!!(completedCount$ | async)" class="clear-completed" (click)="handleClearCompleted()">Clear completed</button>
+  <button *ngIf="!!(completedCount$ | async)" class="clear-completed" (click)="handleClearCompleted()">
+    Clear completed
+  </button>
 </footer>
