loading data from REST api endpoint

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <input
     class="new-todo"
     placeholder="What needs to be done?"
-    [value]="name"
+    [value]="title"
     (input)="handleChange($event)"
     (keyup)="handleSubmit($event)"
   />
