--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 @import '~todomvc-app-css/index.css';
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading {
+  padding: 1em;
+  font-size: larger;
+  font-weight: bolder;
+}
